--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,47 @@
 name: Python
+
 on:
   schedule:
-  - cron: "*/10 * * * *"
-    
+    - cron: "*/10 * * * *"
+
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-        
-        - name: checkout repo content
-          uses: actions/checkout@v2 # checkout the repository content to github runner.
-        - name: setup python
-          uses: actions/setup-python@v2
-          with:
-              python-version: 3.8 #install the python needed
-        - name: execute py script # run the run.py to get the latest data
-          run: |
-              python timer.py
-              
-        - name: commit files
-          run: |
-                git config --local user.email "ianvincent916@gmail.com"
-                git config --local user.name "iVGeek"
-                git add -A
-                git commit -m "keep alive" -a
-        
-        - name: push changes
-          uses: ad-m/github-push-action@v0.6.0
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            branch: main
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout repository content
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.8
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Execute Python script
+        run: python timer.py
+
+      - name: Commit changes
+        run: |
+          git config --local user.email "ianvincent916@gmail.com"
+          git config --local user.name "iVGeek"
+          git add -A
+          git commit -m "keep alive" -a
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
